--- a/src/component/card.css
+++ b/src/component/card.css
@@ -5,42 +5,43 @@
 }
 
 .content{
-    background-color: aqua;
+    /* background-color: aqua; */
     height:83%;
-    padding-top: 5%;
-    /* width: 100%; */
-    /* position: relative; */
-    /* top: 10.5vh; */
+    width: 100%;
+    /* padding-top: 5%; */
+    padding-top: 2%;
     display: flex;
     flex-wrap: wrap;
-    /* width:fit-content; */
-
     overflow: auto;
-    /* margin-bottom: 20px; */
-    /* z-index: -1; */
 }
 .card{
-    background-color: red;
-    height: 35%;
-    width: 16rem;
-    margin: 1.5rem;
+    /* background-color: red; */
+    height: 70%;
+    width: 15%;
     display: flex;
+    margin-left: 0.5%;
+    margin-bottom: 2%;
     flex-direction: column;
     outline-style: solid;
     outline-width: 1px;
-    /* position: relative; */
 }
 
 .card-img{
+    /* background-color: yellow; */
     width: 100%;
     height: 60%;
-    margin-bottom: 5px;
-    /* background-color: yellow; */
+    margin-bottom: 5%;
    
+}
+
+.card-img img{
+    height: 100%;
+    width: 100%;
 }
 
 .shirt{
     /* background-color: blueviolet; */
+    height: 13%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -55,12 +56,9 @@
 }
 .shirt-name{
     /* background-color: burlywood; */
-    /* width: 250px; */
-    max-width: 16rem;
-    height: 40px;
-    /* max-width: 12rem; */
-    margin-bottom: 10px;
-    display: flex;
+    
+    height: fit-content;
+    width: fit-content;
     text-align: center;
     
 }
@@ -71,21 +69,29 @@
     font-weight: 600;
     font-size: 25px;
     color: maroon;
-    margin-left: 35px;
-    margin-bottom: 8px;
+    margin-left: 9%;
+    margin-bottom: 5%;
 }
 .stock{
     /* background-color: aqua; */
-    margin-left: 58px;
-    margin-bottom: 10px;
+    width: 100%;
+    /* margin-left: 35%; */
+    margin-bottom: 5%;
+    display: flex;
+    justify-content: center;
 }
 em{
-    margin-left: 5px;
+    margin-left: 2%;
+}
+
+.a-b{
+    /* background-color: greenyellow; */
+    height: 6%;
+    display: flex;
+    justify-content: center;
 }
 .add-button{
-    width: 150px;
-    height: 30px;
-    margin-left: 50px;
+    width: 50%;
     background-color: blueviolet;
     color: white;
     border-radius: 15px;
