--- a/src/component/cartpage/cart.css
+++ b/src/component/cartpage/cart.css
@@ -6,39 +6,55 @@
 
 .cont{
     /* background-color: aqua; */
+    position: relative;
+    height: 83%;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    position: relative;
-    top: 10.5vh;
-    /* height: 87vh; */
+    overflow: auto;
+    
 }
 
 
 .rectangle{
     
-    margin: 20px;
+    margin: 0.5%;
     background-color: burlywood;
-    height: 250px;
+    height: 230px;
     width:50%;
-    position: relative;
     display: flex;
     align-items: center;
     outline: black solid 0.5px;
 }
 
-.rectangle>img{
-    height: 250px;
+.rec-img{
+    background-color: gold;
+    height: 100%;
     width: 23%;
+    margin-right: 5%;
+}
+
+.rec-img img{
+    height: 100%;
+    width: 100%;
+}
+
+.pr-details{
+    /* background-color: red; */
+    height: 20%;
+    width: 55%;
+    display: flex;
+    justify-content: space-around;
+    margin-right: 3%;
 }
 
 .quant{
-    position: absolute;
+  
     background-color: greenyellow;
-    height: 30px;
-    width:  60px;
-    left: 300px;
+    height: 100%;
+    width:  10%;
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,17 +65,21 @@
 }
 
 .mul{
-    background-color: burlywood;
-    position: absolute;
-    left:380px;
+    /* background-color: greenyellow; */
+    height: 100%;
+    width: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+   
 }
 
 .pr{
     background-color: greenyellow;
-    position: absolute;
-    left: 410px;
-    height: 30px;
-    width:  60px;
+   
+    height: 100%;
+    width:  20%;
     font-size: large;
     font-weight: 600;
     display: flex;
@@ -70,18 +90,19 @@
 }
 
 .arrow{
-    /* background-color: red; */
-    position: absolute;
-    left: 490px;
+    /* background-color: greenyellow; */
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    
 }
 
 .tot-pr{
     background-color: rgb(22, 192, 234);
-    height: 30px;
-    width:  80px;
+    height: 100%;
+    width:  25%;
     outline : black solid 0.5px;
-    position: absolute;
-    left: 530px;
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -91,44 +112,77 @@
 
 .btn{
     /* background-color: aqua; */
-    height: 170px;
-    width: 150px;
-    position: absolute;
-    left: 680px;
-    padding-top: 30px;
-    
+    height: 70%;
+    width: 18%;
+    margin-right: 5%;
+   
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.add-rem{
+    /* background-color: red; */
+    height: 27.5%;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .add-quant{
-    width: 30px;
-    height: 30px;
+    width: 25%;
+    height: 87%;
     background-color: blueviolet;
     color: white;
     border-radius:50px;
-    margin-bottom: 50px;
+   
     font-weight: 600;
-    font-size: large;
-    margin-left: 20px;
+    font-size: 25px;
+    
 }
 
 .rem-quant{
-    width: 30px;
-    height: 30px;
+    width: 25%;
+    height: 87%;
     background-color: blueviolet;
     color: white;
     border-radius:50px;
-    margin-bottom: 50px;
+    
     font-weight: 600;
-    font-size: large;
-    margin-left: 50px;
+    font-size: 25px;
+   
+}
+
+.pr-stock{
+    /* background-color: green; */
+    height: 15%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .del-btn{
     background-color: red;
-    width: 150px;
-    height: 30px;
+    width: 100%;
+    height: 20%;
     color: white;
     border-radius: 15px;
-    margin-bottom: 50px;
+    font-size: 15px;
     font-weight: 600;
 }
+
+.total-price{
+    /* background-color: red; */
+    position: fixed;
+    height: 10%;
+    width: 17%;
+    top: 45%;
+    left: 80%;
+    display: flex;
+    align-items: center;
+    font-size: 25px;
+    font-weight: 600;
+    outline: rgb(44, 205, 125) solid 5px;
+}
+
