--- a/src/component/siginpage/signin.css
+++ b/src/component/siginpage/signin.css
@@ -4,9 +4,7 @@
     box-sizing: border-box;
 }
 
-.signinComp{
-    /* background-color: red; */
-    /* margin-top: 10.5vh; */
-    position: relative;
-    top: 10.5vh;
+.signin-content{
+    height: 83%;
+    width: 100%;
 }
