--- a/src/component/card.css
+++ b/src/component/card.css
@@ -11,13 +11,14 @@
     /* padding-top: 5%; */
     padding-top: 2%;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     overflow: auto;
 }
 .card{
     /* background-color: red; */
-    height: 70%;
-    width: 15%;
+    height: 500px;
+    width: 280px;
     display: flex;
     margin-left: 0.5%;
     margin-bottom: 2%;
